--- a/settings.json.example
+++ b/settings.json.example
@@ -16,17 +16,17 @@
   "symbol": "LRG",
 
   // logo
-  "logo": "images/largo_logo.png",
+  "logo": "/images/largo-logo_horizontal.png",
 
   // favicon
   "favicon": "public/favicon.ico",
 
   // Uses bootswatch themes (http://bootswatch.com/)
   // Valid options:
-  //     Cerulean, Cosmo, Cyborg, Darkly, Flatly, Journal, Lumen, Paper,
+  //     Largo, Cerulean, Cosmo, Cyborg, Darkly, Flatly, Journal, Lumen, Paper,
   //     Readable, Sandstone, Simplex, Slate, Spacelab, Superhero, United, Yeti
   // theme (see /public/themes for available themes)
-  "theme": "Cerulean",
+  "theme": "Largo",
 
   // port to listen for requests on.
   "port" : 3001,
