--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "test": "node ./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "request": "2.74.0",
-    "jsonminify": "0.2.3",
-    "mongodb": "2.0.45",
-    "mongoose": "4.1.10",
-    "markdown-js": "0.0.3",
-    "qr-image": "~2.0.0"
+    "express": "~4.17.1",
+    "static-favicon": "~2.0.0-alpha",
+    "morgan": "~1.10.0",
+    "cookie-parser": "~1.4.5",
+    "body-parser": "~1.19.0",
+    "debug": "~4.1.1",
+    "jade": "~1.11.0",
+    "request": "~2.88.2",
+    "jsonminify": "0.4.1",
+    "mongodb": "~3.5.6",
+    "mongoose": "5.7.5",
+    "markdown-js": "~0.0.4",
+    "qr-image": "~3.2.0"
   },
   "devDependencies": {
-    "jasmine": "~2.1.0"
+    "jasmine": "~3.5.0"
   }
 }
