--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "cookie-parser": "~1.4.5",
     "body-parser": "~1.19.0",
     "debug": "~4.1.1",
-    "jade": "~1.11.0",
+    "pug": "~2.0.4",
     "request": "~2.88.2",
     "jsonminify": "0.4.1",
     "mongodb": "~3.5.6",
     "mongoose": "5.7.5",
-    "markdown-js": "~0.0.4",
-    "qr-image": "~3.2.0"
+    "qr-image": "~3.2.0",
   },
   "devDependencies": {
     "jasmine": "~3.5.0"
