--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jsonminify": "0.4.1",
     "mongodb": "~3.5.6",
     "mongoose": "5.7.5",
-    "qr-image": "~3.2.0",
+    "qr-image": "~3.2.0"
   },
   "devDependencies": {
     "jasmine": "~3.5.0"
